# tf2-api

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
colors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
colors/migrations/: 0001_initial.py
locale/bg/LC_MESSAGES/: django.po
locale/cs/LC_MESSAGES/: django.po
locale/da/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.po
locale/el/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/fi/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/hu/LC_MESSAGES/: django.po
locale/nl/LC_MESSAGES/: django.po
locale/pt-br/LC_MESSAGES/: django.po
maps/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
maps/migrations/: 0001_initial.py  0002_alter_map_authors_alter_map_localizedname.py
prefabs/: apps.py  models.py
prefabs/migrations/: 0001_initial.py
qualities/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
qualities/migrations/: 0001_initial.py
rarites/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rarites/migrations/: 0001_initial.py  0002_rename_drop_sound_rarity_loc_key_weapon.py
static/: tf_english.txt
tf2_api/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
worker/: models.py  tasks.py  worker.py
worker/migrations/: 0001_initial.py  0002_alter_trackfiles_id.py  0003_rename_trackfiles_trackfile.py  0004_alter_trackfile_last_modified.py  0005_alter_trackfile_last_modified.py  0006_alter_trackfile_last_modified.py
